new proj/src/objects/GE_ES_Checklist_Version__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Deal_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Management</label>
        <referenceTo>GE_ES_Deal_Management__c</referenceTo>
        <relationshipLabel>Checklist Versions</relationshipLabel>
        <relationshipName>Checklist_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Checklist Version</label>
    <nameField>
        <displayFormat>Ver-{000}</displayFormat>
        <label>Checklist Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>